--- a/homework/python-basics-2-hw.ipynb
+++ b/homework/python-basics-2-hw.ipynb
@@ -16,8 +16,7 @@
     "---\n",
     "### Collaborators\n",
     "You MUST include a bulleted list with the full names of everyone you collaborated with on this assignment.\n",
-    "- Jane Doe\n",
-    "- John Doe"
+    "- Hanna Rimel"
    ]
   },
   {
@@ -31,18 +30,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ID78?', 'ID456', 'ID12?', 'ID987']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# the original list of subject IDs (don't change this)\n",
     "subjects = ['ID78?', 'ID456', 'ID12?', 'ID987']\n",
     "\n",
     "# '?' -> '0'\n",
     "# ... your code here ...\n",
+    "for item in range(len(subjects)):\n",
+    "    if item == '?':\n",
+    "        print(item)\n",
+    "        item = '0'\n",
+    "    \n",
     "\n",
     "# print out altered list of subject IDs after replacing '?' with '0'\n",
     "subjects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ID78?', 'ID456', 'ID12?', 'ID987']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in range(len(subjects)):\n",
+    "    for s in item:\n",
+    "        if s == \"?\":\n",
+    "            s = \"0\"\n",
+    "print(subjects)"
    ]
   },
   {
@@ -59,13 +95,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after class definition on line 2 (701163000.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[28], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    values = [1, 5, 8, 2, 7, 3, 6, 4]\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after class definition on line 2\n"
+     ]
+    }
+   ],
    "source": [
     "# ... your JokeList class code here ...\n",
-    "\n",
-    "\n",
+    "class Jokelist:\n",
+    "    def __init__(self, input)\n",
     "# Let's try out your JokeList class.\n",
     "# You don't have to change any of the code below,\n",
     "# but make sure you agree that the output is as expected.\n",
@@ -83,6 +128,11 @@
     "---\n",
     "3. (3 pts) Write a list comprehension that returns a new list with the square root of each value in the original list (`original_values` below) where the original value is less than 5. Store the new list in the variable `new_list` and print it out to verify. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -117,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
