--- a/rise-presentations/data-arrays-and-visualization/n-dimensional-arrays.ipynb
+++ b/rise-presentations/data-arrays-and-visualization/n-dimensional-arrays.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "digital_signal = [0, 1, 4, 4, 4, 2, 2, 1, 2, 4, 5]\n",
+    "digital_signal = [0, 1, 4, 4, 4, 2, 2, 1, 2, 4, 5] # array \n",
     "sample_interval = 1"
    ]
   },
